Fix dropdown items not visible in darkmode on some browsers

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -184,6 +184,11 @@ select.custom-select {
   background-size: 1.5rem;
 }
 
+select.custom-select option {
+  // fix dropdown items not visible in darkmode on some browsers
+  color: initial;
+}
+
 select.custom-select:focus {
   border-color: none !important;
   box-shadow: none !important;
